--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,10 @@
   border: 1px solid black;
 }
 
+.left-menu-titles{
+  cursor: pointer;
+}
+
 .main-content-container {
   background-color: rgba(0, 0, 0, 0.5);
   flex-grow: 1;
