--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,7 @@ body, html {
 
 
 .root {
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(83,181,176);
   width: 80%;
   height: 80%;
   border-radius: 16px; /* Optional: rounded corners */
@@ -70,6 +70,7 @@ body, html {
   display: flex;
   /*justify-content: center;*/
   /*align-items: center;*/
+  overflow: auto;
 }
 
 .container {
@@ -216,4 +217,143 @@ nav li:hover {
   position: absolute;
   top: 0;
   left: 0;
+}
+
+.outer-root {
+  width: 100%; /* Adjust width and height as needed */
+  height: 100%;
+  display: flex;
+  flex-direction: column; /* Arrange items vertically */
+  justify-content: center; /* Center items vertically within the container */
+  align-items: center; /* Center items horizontally within the container */
+}
+
+.oval {
+  height: 100px;
+  width: 200px;
+  background-color: #555;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  /*margin-bottom: 90px;*/
+  display: none;
+}
+
+.home-page {
+  background-color: rgb(83,181,176);
+  display: flex;
+  flex-direction: column;
+  /*justify-content: center;*/
+  /*align-items: center;*/
+
+  width: 100vw; /* Full viewport width */
+
+
+}
+
+.home-page-main-content {
+  margin-left: 16px;
+  margin-right: 16px;
+}
+
+/*nav a {*/
+/*  margin: 10px;*/
+/*  text-decoration: none;*/
+/*  font-size: 18px;*/
+/*  color: white;*/
+/*}*/
+
+/*nav a:hover {*/
+/*  text-decoration: underline;*/
+/*}*/
+
+.shopAllDayTitle {
+  color: white;
+  font-size: 80px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.link-with-desc {
+  /*display: flex;*/
+  /*flex-direction: row;*/
+  margin-top: 60px;
+}
+
+.link-long-desc {
+  color: white;
+  font-size: 30px;
+}
+
+.link-style {
+  color: black;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.goal{
+  margin-top: 30px;
+  padding: 16px;
+  color: white;
+  font-size: 40px;
+  font-weight: bold;
+  /*background-color: rgb(231,233,235);*/
+  background: #333;
+  border-radius: 16px; /* Optional: rounded corners */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.8); /* Elevation effect */
+}
+
+.goal-desc {
+  color: white;
+  font-size: 30px;
+  margin-right: 80px;
+  font-weight: normal;
+}
+
+.aws-container {
+  padding: 16px;
+  margin-top: 30px;
+  height: 600px;
+  width: 600px;
+  background-color: #FF9900;
+  border-radius: 16px; /* Optional: rounded corners */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.8); /* Elevation effect */
+}
+
+.aws-title {
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.ec2-container {
+  padding: 16px;
+  margin-top: 30px;
+  height: 500px;
+  width: 500px;
+  background-color: rgb(190,21,88);
+  border-radius: 16px; /* Optional: rounded corners */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 1.8); /* Elevation effect */
+}
+
+.ec2-title {
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.docker-container {
+  padding: 16px;
+  margin-top: 30px;
+  height: 400px;
+  width: 400px;
+  background-color: rgb(28, 144, 237);
+  border-radius: 16px; /* Optional: rounded corners */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.8); /* Elevation effect */
+}
+
+.docker-title {
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
 }
