--- a/src/App.css
+++ b/src/App.css
@@ -314,7 +314,7 @@ nav li:hover {
   padding: 16px;
   margin-top: 30px;
   height: 600px;
-  width: 600px;
+  width: 1200px;
   background-color: #FF9900;
   border-radius: 16px; /* Optional: rounded corners */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.8); /* Elevation effect */
@@ -330,7 +330,7 @@ nav li:hover {
   padding: 16px;
   margin-top: 30px;
   height: 500px;
-  width: 500px;
+  width: 1000px;
   background-color: rgb(190,21,88);
   border-radius: 16px; /* Optional: rounded corners */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 1.8); /* Elevation effect */
@@ -350,6 +350,24 @@ nav li:hover {
   background-color: rgb(28, 144, 237);
   border-radius: 16px; /* Optional: rounded corners */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.8); /* Elevation effect */
+  cursor: pointer;
+  transition: background-color 0.3s ease; /* Smooth transition effect */
+}
+
+.docker-container:hover{
+  /*background-color: #e0e0e0; !* Lightened background color on hover *!*/
+  /*background-color: rgb(15, 100, 165); !* Darkened background color on hover *!*/
+  background-color: rgb(20, 110, 180); /* Darkened background color on hover */
+}
+
+.docker-container li {
+  flex: 1;
+  text-decoration: none;
+  color: #fff;
+  padding: 10px;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 18px;
 }
 
 .docker-title {
@@ -357,3 +375,68 @@ nav li:hover {
   font-size: 20px;
   font-weight: bold;
 }
+
+.docker-container2 {
+  margin-left: 30px;
+  padding: 16px;
+  margin-top: 30px;
+  height: 400px;
+  width: 400px;
+  background-color: rgb(28, 144, 237);
+  border-radius: 16px; /* Optional: rounded corners */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.8); /* Elevation effect */
+  cursor: pointer;
+  transition: background-color 0.3s ease; /* Smooth transition effect */
+}
+
+.docker-container2:hover{
+  /*background-color: #e0e0e0; !* Lightened background color on hover *!*/
+  /*background-color: rgb(15, 100, 165); !* Darkened background color on hover *!*/
+  background-color: rgb(20, 110, 180); /* Darkened background color on hover */
+}
+
+.docker-container2 li {
+  flex: 1;
+  text-decoration: none;
+  color: #fff;
+  padding: 10px;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.all-docker-containers {
+  display: flex;
+}
+
+.spring-boot-logo {
+  width: 100%;
+  height: 100px;
+  /*border: 1px solid black;*/
+  margin-right: 10px; /* Add some margin between image and text */
+}
+
+.docker-description-container {
+  font-size: 18px;
+  /*color: white;*/
+  color: #f0f0f0
+}
+
+.erd-image-container {
+  align-self: center;
+  width: 100%; /* Ensure the container takes up the full width available */
+  height: 100%; /* Set a fixed height or use another measurement like viewport height (vh) */
+  overflow: hidden; /* Hide any overflow to prevent scrollbars */
+  position: relative; /* Ensure proper positioning of the image */
+}
+
+.erd-image-container img {
+  width: 100%; /* Make the image fill the width of its container */
+  height: auto; /* Automatically adjust height to maintain aspect ratio */
+  align-self: center;
+  position: absolute; /* Position the image absolutely within its container */
+  top: 0; /* Align to the top of the container */
+  left: 0; /* Align to the left of the container */
+}
+
+
